commenting on the document

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <div id="container" class="carousel-item active"></div>
         <h2>Speed Detector</h2>
+
+        <!-- input form where the user will input the speed  -->
+
         <input type="number" placeholder="Enter Speed" id="speed">
+
+        <!-- A button where the user will use to submit the speed entered in the input section  -->
+        
         <button id="btn" type="submit" onclick="speedDetector()" class="btn btn-dark">Check</button>
          <h5>Points:</h5>
         <p id="points"></p>
